# cosmonauticaaa

./: CMakeLists.txt  CMakePresets.json  main.cpp
comunication/: cosmonautica-98b85-firebase-adminsdk-fbsvc-191cf38fca.json  index.js  package-lock.json  package.json
flet_see/: pyproject.toml
flet_see/src/: main.py
python_scripts/: conexion.py  init.py  reciber.py
sensor_see/: pyproject.toml
sensor_see/src/: main.py
